# Pickmi-Hotel

./: .env.example  .gitignore  README.md  docker-compose.yaml  pickmi_data.sql
backend/: Dockerfile  alembic.ini  project-wiki.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_09_2154-146f92518057_add_column_price_per_day_to_room_types_.py  2026_02_09_2235-4011e02336bb_create_rooms_table.py  2026_02_09_2253-70cc5f875dc1_create_table_amenities.py  2026_02_09_2316-c70ac777b310_create_room_types_amenities_association_.py  2026_02_09_2350-091ce5543649_add_columns_image_and_flag_is_main_to_.py  2026_02_10_0100-e2d26edba477_add_column_image_to_amenities_and_.py  2026_02_10_1731-9adbab3e44f8_add_column_slug_to_room_types_table.py  2026_02_10_1740-4d4989361879_column_slug_is_required.py  2026_02_15_1459-caee9614425c_delete_column_image_to_amenities.py  2026_02_17_1242-6d6a8f4cff7d_create_user_table.py  2026_02_17_1405-bd4921fa249d_create_user_table.py  2026_02_17_2357-1ff922362d33_create_employee_and_position_tables.py  2026_02_26_2338-e54f0334d14a_initialization_database.py  2026_02_28_1636-68e22d11d04a_add_reservation_table_and_delete_column_.py  2026_03_05_1206-6c3a1754c294_create_service_and_categories_services_.py  2026_03_05_1332-2d8be20d5223_create_positin_and_service_connection_.py  2026_03_05_1412-23243a16c86e_rename_room_type_amenities_table.py  2026_03_05_1736-a7243758cb69_create_task_table_for_employee.py
backend/src/: main.py
backend/src/core/: __init__.py  config.py  db_helper.py
backend/src/crud/: employees.py  positions.py  (+7 more)
(+273 files in other folders)
