[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamiron",email = "tdrozdikova@gmail.com"}
]
readme = "project-wiki.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy[async] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "black (>=26.1.0,<27.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
