[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tamiron <tdrozdikova@gmail.com>"]
readme = "project-wiki.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.128.5,<0.129.0"
uvicorn = {extras = ["standard"], version = ">=0.40.0,<0.41.0"}
sqlalchemy = {extras = ["async"], version = ">=2.0.46,<3.0.0"}
asyncpg = ">=0.31.0,<0.32.0"
pydantic-settings = ">=2.12.0,<3.0.0"
alembic = ">=1.18.3,<2.0.0"
black = ">=26.1.0,<27.0.0"
pydantic-extra-types = {extras = ["phone-numbers"], version = ">=2.11.0,<3.0.0"}
bcrypt = ">=5.0.0,<6.0.0"
pyjwt = ">=2.11.0,<3.0.0"
phonenumbers = ">=9.0.24,<10.0.0"
pydantic = {extras = ["email"], version = ">=2.12.5,<3.0.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
